test_data/end_to_end/err__expected_named_struct/stderr.txt
error: expected named struct
  --> main.cz:3:5
3 |     t { x: 42 };
        ~
